--- a/EntityMovieApp/Pages/Maybes.xaml
+++ b/EntityMovieApp/Pages/Maybes.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Maybes" Height="500" Topmost="True" Width="500">
     <Grid Margin="0,0,470,0">
-        <TreeView HorizontalAlignment="Left" Name="maybeTree" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" BorderThickness="0" Height="434" FontSize="16" Margin="10,11,-461,0" VerticalAlignment="Top" Width="473" RenderTransformOrigin="0.5,0.5" Background="Black"/>
-        
+        <TreeView HorizontalAlignment="Left" Name="maybeTree" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Disabled" BorderThickness="0" Height="434" FontSize="16" Margin="10,11,-451,0" VerticalAlignment="Top" Width="463" RenderTransformOrigin="0.5,0.5" Background="Black"/>
+        <Button Content="Remove Selected Maybe" HorizontalAlignment="Left" Margin="312,28,-435,0" VerticalAlignment="Top" Width="145" Click="Button_Click_1" Height="28"/>
+
     </Grid>
 </Window>
